--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,13 +3,12 @@ body {
   font-family: "Poppins", sans-serif;
 }
 .timeline {
-  padding: 20px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  top: 40%;
-  left: 30%;
 }
 .card {
   display: flex;
@@ -21,12 +20,11 @@ body {
   .icon {
     width: 50px;
     height: 50px;
+    flex-shrink: 0;
   }
   .content {
-    white-space: nowrap;
-    overflow: hidden;
     flex-grow: 1;
-    margin-left: 20px;
+     margin-left: 20px;
     margin-right: 20px;
     h3 {
       margin: 0;
@@ -42,5 +40,6 @@ body {
     width: 35px;
     height: 35px;
     filter: grayscale(100%);
+    flex-shrink: 0;
   }
 }
